@@ -1,0 +1,7 @@
+namespace C
+{
+  class OtherFileClass {
+  public:
+    int z;
+  };
+}
