@@ -1,3 +1,9 @@
+2002-11-29  David Carlton  <carlton@bactrian.org>
+
+	* dwarf2read.c (add_partial_symbol): Add partial symbols
+	corresponding to classes, etc. to global list.
+	(new_symbol): Ditto, mutatis mutandem.
+
 2002-11-27  David Carlton  <carlton@math.stanford.edu>
 
 	* dwarf2read.c (add_partial_enumeration): New function.
